# Crawler-propertyguru

./: .flake8  .gitignore  .mypy.ini  .pre-commit-config.yaml  CLAUDE.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Makefile  README.md  USAGE.md  config.yaml  crawl_progress.json  env.example  fix_xvfb.sh  main.py  proxy_pool.json  pyproject.toml  requirements.txt  setup.py  setup.sh  test.sh  test_chromium.py  test_selenium_basic.py  test_uc_simple.py  test_undetected.py
BrowserAPIExample/: ex.py
Ref/: WaterMarkRemoverPost.md  代理Demo.py
Ref/browser/: browserAPI.py  geo.py
Ref/proxy/: 直连.py
cert/: example.py
crawler/: __init__.py  browser.py  config.py  database.py  database_factory.py  database_mysql.py  database_postgresql.py  db_operations.py  media_processor.py  models.py  orm_models.py  parsers.py  progress_manager.py  propertyguru_crawler.py  proxy_manager.py  spider.py  storage.py  watermark_remover.py  watermark_remover_no_proxy.py
docs/: Crawler-Plan.md  DATABASE_SIMPLIFICATION.md  DATABASE_USAGE.md  REFACTORING_GUIDE.md  storage.md
examples/: __init__.py  advanced_example.py  async_example.py  basic_example.py  browser_example.py  database_example.py  proxy_example.py  residential_proxy_example.py  s3_example.py  watermark_remover_example.py
propertyguru-auto-searcher/: .dockerignore  .gitignore  BUILD_DEPLOYMENT.md  CLAUDE.md  DOCKER.md  DOCKER_FILES.md  Dockerfile  FRONTEND_MIGRATION.md  Makefile  PLANE.md  QUICKSTART.md  README.md  STREAMING_TEST.md  TROUBLESHOOTING_THINKING.md  check_ai_config.sh  config.example.env  docker-compose.prod.yml  docker-compose.yml  go.mod  go.sum  start_server.sh  test_ai_thinking.sh  test_backend_stream.sh  test_different_queries.sh  test_streaming.sh
propertyguru-auto-searcher/config/: postgresql.conf
propertyguru-auto-searcher/docs/: AI_INTEGRATION.md  API.md  IMPLEMENTATION.md
propertyguru-auto-searcher/scripts/: backup.sh  deploy.sh  restore.sh  setup.sh
propertyguru-auto-searcher/sql/: README.md  check_embedding_status.sql  init_postgresql_unified.sql  update_embedding_dimension.sql
propertyguru-auto-searcher/web/: .gitignore  README.md  index.html  package-lock.json  package.json  start-dev.sh  vite.config.ts
propertyguru-crawler/: CLAUDE.md  Dockerfile  README.md  README_PROPERTYGURU.md  config.yaml  crawl_progress.json  env.example  listing_page_oxylab.html  main.py  proxy_pool.json  pyproject.toml  requirements.txt  res_firecrawl.json  setup.sh  test_http_crawler_output.html  ttt.json  zenrows_page_dump.html.meta.txt
propertyguru-crawler/crawler/: __init__.py
propertyguru-crawler/crawler/browser/: __init__.py  base.py  browser.py  factory.py  utils.py
propertyguru-crawler/crawler/browser/drivers/: local.py  puppeteer_remote.py  remote.py  remote_async.py  remote_new.py  simple_puppeteer_remote.py  undetected.py
propertyguru-crawler/crawler/core/: __init__.py  crawler.py  spider.py
propertyguru-crawler/crawler/database/: __init__.py  factory.py  interface.py  mysql.py  operations.py  orm_models.py  postgresql.py
propertyguru-crawler/crawler/http/: client.py  providers.py
propertyguru-crawler/crawler/models/: __init__.py  listing.py
propertyguru-crawler/crawler/pages/: base.py  detail_http.py  factory.py  listing_http.py  parsing_utils.py
propertyguru-crawler/crawler/parsers/: __init__.py  detail_json_parser.py  parsers.py
propertyguru-crawler/crawler/storage/: __init__.py  manager.py  media_processor.py
propertyguru-crawler/crawler/utils/: __init__.py  proxy_manager.py
propertyguru-crawler/docs/: Crawler-Plan.md  DATABASE_REFACTORING.md  GEOCODING.md  HTTP_CRAWLER_UPGRADE.md  POSTGRESQL_QUICKSTART.md  REFACTORING_SUMMARY.md  SUPABASE_QUICKSTART.md  UNDETECTED_CHROME_USAGE.md  UNIFIED_DATABASE.md  detail_data.json  listing_data.json
propertyguru-crawler/examples/: advanced_example.py  basic_example.py  qiniu_example.py
propertyguru-crawler/scripts/: format.ps1  format.sh  lint.ps1
propertyguru-crawler/sql/: init_postgresql.sql  init_postgresql_unified.sql
propertyguru-crawler/tests/: test_detail_json_parser.py  test_http_crawler.py  test_http_providers.py  test_listing_http.py  test_proxy.py  test_scrapingbee_dump.py  test_zenrows.py  test_zenrows_dump.py
propertyguru-crawler/tests/manual/: test_oxylabs_pagination.py
propertyguru-crawler/utils/: geocoding.py  retry.py
scripts/: geocode_listings.py  lint.sh  reorganize_crawler.py
sql/: add_geocoding_columns.sql  change.sql  init.sql
tests/: README.md  conftest.py  test_browser.py  test_watermark_api.py  test_watermark_api_no_proxy.py  test_watermark_remover.py
utils/: __init__.py  logger.py  proxy.py
(+42 files in other folders)
